# specforge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adapter-api.md  agent-workflow.md  architecture.md  benchmarks.md  claude-code.md  codex.md  language.md  launch.md  roadmap.md  security.md
examples/recipe-price-finder/.specforge/: app.appspec  stack.appspec
examples/software-spend-approval/.specforge/: app.appspec
examples/task-manager/.specforge/: app.appspec
specforge/: __init__.py  ast.py  cli.py  demo.py  generate.py  guardrails.py  parser.py  planner.py  privacy.py  validate.py
specforge/adapters/: __init__.py
specforge/adapters/fastapi_sqlite_basic/: __init__.py  adapter.py
tests/: test_cli.py  test_demo.py  test_generator.py  test_guardrails.py  test_parser.py  test_planner.py  test_privacy.py  test_validator.py
