[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge"
version = "0.1.0"
description = "Guardrails for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SpecForge contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
specforge = "specforge.cli:main"

[tool.setuptools.packages.find]
include = ["specforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
